ansible/roles/cluster_config/files/traefik-lb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-ingress
  labels:
    name: kube-ingress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: kube-ingress

---

kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: traefik
  namespace: kube-ingress
spec:
  template:
    metadata:
      labels:
        app: traefik
    spec:
      hostNetwork: true
      nodeSelector:
        lb: "true"
      serviceAccount: traefik
      containers:
        - name: traefik
          image: traefik
          ports:
            - name: http
              containerPort: 80
            - name: admin
              containerPort: 8080
          securityContext:
            capabilities:
              add:
              - NET_BIND_SERVICE
          args:
          - --api
          - --web
          - --kubernetes
          - --logLevel=INFO
